--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.116.1"
 uvicorn = {extras = ["standard"], version = "^0.35.0"}
 httpx = "^0.28.1"
 python-dotenv = "^1.1.1"
+gunicorn = "^23.0.0"
 
 
 [build-system]
